<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MaSoi</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="facebook_app_id">312067449576530</string>
    <string name="fb_login_protocol_scheme">fb312067449576530</string>
    <string name="google_login">AIzaSyAWQKdmulDz35Hl6fKvWIzHcGemq8sar5M</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtuser">User</string>
    <string name="txtpass">Password</string>
    <string name="btnlogin">Login</string>
    <string name="btnSignup">Signup</string>
    <string name="txtforget">forget password ?</string>

    <string name="txtlistFriend">List Friend</string>
    <string name="btnPlaygame">Play now</string>
    <string name="hintname">search name</string>

    <string name="btnNew">New</string>
    <string name="btnPhaynow">Play now</string>
    <string name="hintroomenter">room enter</string>
    <string name="txtban">table</string>
    <string name="txttablenumber">table number</string>
    <string name="txtbetting">betting</string>
    <string name="txtpeoplenumber">people number</string>

    <string name="btnSend">Send</string>

    <string name="txtSignup">SIGNUP</string>
    <string name="txtusernameup">Username</string>
    <string name="txtpassw">PassWord</string>
    <string name="txtpassgain">Pass Again</string>
    <string name="btnSignupok">SignUp</string>

    <string name="txtId">ID :</string>
    <string name="txtUser">User :</string>

    <string name="txtWin">Win :</string>
    <string name="txttLoss">Loss :</string>
    <string name="btnClick">Click</string>

    <string name="btnEdit">Edit</string>
    <string name="hintFullname">Full Name</string>
    <string name="hintPhone">Phone Number</string>
    <string name="hintEmail">Email</string>
    <string name="hintAddress">Address</string>
    <string name="cdd">Birthday</string>
    <string name="btnday">Date</string>

    <string name="hintNickname">Nick Name!</string>
    <string name="btnCheck">Check</string>
    <string name="btnApply">Apply</string>
    <string name="txtThank">Thank You!</string>
    <string name="hintContent">Content</string>

    <string name="txtBetmoney">Bet Money</string>
    <string name="btnCreate">Create</string>

    <string name="txtNick">Nick Name :</string>
    <string name="txtFullName">Full Name :</string>
    <string name="txtPhone">PhoneNumber :</string>
    <string name="txtEmail">Email :</string>
    <string name="txtBrithday">Birthday : </string>
    <string name="txtLevel">Level :</string>

    <string name="btnConnectsv">Connect Server</string>
    <string name="btnConnectlc">Connect Local</string>
    <string name="conectServer">You cannot connect to the server!</string>
    <string name="btnstart" tools:ignore="ExtraTranslation">Start</string>
    <string name="btnkill">Kill</string>
    <string name="btnnotkill">Not Kill</string>
    <string name="NegativeButton">OK</string>
    <string name="btnquitstart">Quit Start</string>
    <string name="btnexit">Exit</string>

</resources>
