<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bgmasoi"
    android:gravity="center"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="120sp"
                android:layout_height="120sp"
                android:src="@drawable/bghome"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnEdit"
                android:background="@drawable/button"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtFullName"
                android:hint="@string/hintFullname"
                />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtPhone"
                android:hint="@string/hintPhone"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmail"
                android:hint="@string/hintEmail"
                />
            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/edtaddress"
                android:hint="@string/hintAddress"/>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtBirthday"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/cdd"
                    android:enabled="false"
                    android:inputType="none" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnday"
                    android:id="@+id/dateBirthday"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>