<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >


    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bgmasoi"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/txtsigup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSignup"
            android:textSize="32dp"
            android:textColor="#FFF"
            android:layout_marginTop="30dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/txtusernameup"
                android:textColor="#FFF"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/edtuser"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:background="@drawable/edittext"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textImeMultiLine"
                android:textAlignment="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/txtpassw"
                android:textColor="#FFF"
                android:textSize="24dp"
                />
            <EditText
                android:id="@+id/edtpass"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:background="@drawable/edittext"
                android:inputType="textPassword"
                android:imeOptions="flagNoExtractUi"
                android:textAlignment="center"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/txtpassgain"
                android:textColor="#FFF"
                android:textSize="24dp"
                />

            <EditText
                android:id="@+id/edtpass2"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:background="@drawable/edittext"
                android:imeOptions="flagNoExtractUi"
                android:textAlignment="center"
                android:inputType="textPassword" />

        </LinearLayout>
        <Button
            android:id="@+id/btnsignup"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/btnSignup"
            android:textColor="#FFF"
            android:background="#1B9ED8"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            />


    </LinearLayout>


</LinearLayout>