<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgmasoi">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/bguser"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="84dp"
            android:layout_marginBottom="250dp"
            android:background="@drawable/user" />

        <ImageButton
            android:id="@+id/btnFeedback"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="109dp"
            android:layout_marginBottom="19dp"
            android:background="@drawable/support" />

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="60dp"
            android:layout_height="60dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="17dp"
            android:background="@drawable/log_out" />



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/txtidd"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:text="@string/txtId"
                    />

                <TextView
                    android:id="@+id/txtid"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="50dp"
                    android:textSize="20dp"
                    android:text=""/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/txtu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txtNick"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"

                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txtFullName"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtfullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"

                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txtPhone"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"

                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txtEmail"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"

                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/txtBrithday"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"

                    android:layout_marginTop="10dp"
                    android:text=""
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/txtlv"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:text="@string/txtLevel"
                    />

                <TextView
                    android:id="@+id/txtlevel"
                    android:textColor="#fff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="27dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:text=""
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/txtww"
                        android:textColor="#fff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:textSize="20dp"
                        android:text="@string/txtWin"

                        />

                    <TextView
                        android:id="@+id/txtwwin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="8dp"
                        android:text=""
                        android:textColor="#fff"
                        android:textSize="20dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/txtl"
                        android:textColor="#fff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/txttLoss"
                        />

                    <TextView
                        android:id="@+id/txtloss"
                        android:textColor="#fff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="2dp"
                        android:text=""
                        />
                </LinearLayout>



        </LinearLayout>



            <Button
                android:id="@+id/btnEdit"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="118dp"
                android:layout_marginBottom="191dp"
                android:background="@drawable/button"
                android:text="@string/btnEdit" />



        </LinearLayout>



    </LinearLayout>



</LinearLayout>