<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bguser">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">


        <ImageButton
            android:id="@+id/bguser"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:layout_marginBottom="8dp"

            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/user"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/txtu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/txtuser"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"

                    android:layout_marginTop="10dp"
                    android:text="Phú"
                    android:textColor="#fff"
                    android:textSize="20dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtww"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/txtWin"
                    android:textColor="#fff"
                    android:textSize="20dp"

                    />

                <TextView
                    android:id="@+id/txtwwin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="2dp"
                    android:text="200"
                    android:textColor="#fff"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/txttLoss"
                    android:textColor="#fff"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtloss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="2dp"
                    android:text="150"
                    android:textColor="#fff"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btnkick"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/btnClick" />

    </LinearLayout>



</LinearLayout>